--- a/src/Pages/ProperyPage.css
+++ b/src/Pages/ProperyPage.css
@@ -152,13 +152,13 @@
 }
 
 @media (max-width: 476px) {
-
   .heading{
      font-size: 30px;
   }
   .location{
     font-size: 17px;
   }
+  
   .thumbnails {
       grid-template-columns: repeat(2, 1fr);
   }
@@ -189,6 +189,9 @@
   }
   .image{
     max-height: 200px;
+  }
+  .tab-button{
+    font-size: 15px;
   }
 }
 
